fix(spacements): supprimer les anciennes variables de gap pour une meilleure normalisation

--- a/public/samples/theme-tokens-base-light-dark.css
+++ b/public/samples/theme-tokens-base-light-dark.css
@@ -68,11 +68,6 @@
   --text-4xl: clamp(var(--text-48), 2.1818rem + 3.6364vw, var(--text-80));
 
   /* Espacements */
-  --gap-xs: var(--spacing-4);
-  --gap-s: clamp(var(--spacing-8), 0.2955rem + 0.9091vw, var(--spacing-16));
-  --gap-m: clamp(var(--spacing-16), 0.5909rem + 1.8182vw, var(--spacing-32));
-  --gap-l: clamp(var(--spacing-24), 0.8864rem + 2.7273vw, var(--spacing-48));
-  --gap-xl: clamp(var(--spacing-32), 0.7727rem + 5.4545vw, var(--spacing-80));
   --spacing-xs: var(--spacing-4);
   --spacing-s: clamp(var(--spacing-8), 0.2955rem + 0.9091vw, var(--spacing-16));
   --spacing-m: clamp(
